# 8bit-cpu-SystemC

./: .gitignore  CMakeLists.txt  README.md
include/: alu.h  control_unit.h  cpu.h  cpu_defs.h  memory.h  regfile.h
output/: io_output.txt
programs/: add2num.txt  hello.txt  lda_simple.txt  test_io.txt  test_sec.txt
src/: alu.cpp  control_unit.cpp  cpu.cpp  main.cpp  memory.cpp  regfile.cpp
tests/: alu_tb.cpp  control_unit_tb.cpp  cpu_tb.cpp
